# Django-course

django-blog/: db.sqlite3  pyproject.toml
django-blog/apps/post/: forms.py  models.py  urls.py  views.py
django-blog/apps/post/migrations/: 0001_initial.py  0002_category_alter_post_slug_post_categories.py
django-blog/apps/post/templates/post/: post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
django-blog/config/: settings.py  urls.py
django-blog/src/: lessons.txt
